style: fix color contrast for light mode

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,16 +21,16 @@
   --popover-foreground: oklch(14.5% 0 0deg);
   --primary: oklch(20.463% 0 271.152deg);
   --primary-foreground: oklch(98.5% 0 0deg);
-  --secondary: oklch(97.015% 0.0001 271.152deg);
+  --secondary: oklch(96% 0 0deg);
   --secondary-foreground: oklch(20.5% 0 0deg);
-  --muted: oklch(97% 0 0deg);
-  --muted-foreground: oklch(55.6% 0 0deg);
-  --accent: oklch(97% 0 0deg);
+  --muted: oklch(96% 0 0deg);
+  --muted-foreground: oklch(46% 0 0deg);
+  --accent: oklch(96% 0 0deg);
   --accent-foreground: oklch(20.5% 0 0deg);
   --destructive: oklch(57.7% 0.245 27.325deg);
   --destructive-foreground: oklch(57.7% 0.245 27.325deg);
-  --border: oklch(92.2% 0 0deg);
-  --input: oklch(92.2% 0 0deg);
+  --border: oklch(89.8% 0 0deg);
+  --input: oklch(89.8% 0 0deg);
   --ring: oklch(70.8% 0 0deg);
   --chart-1: oklch(64.6% 0.222 41.116deg);
   --chart-2: oklch(60% 0.118 184.704deg);
@@ -38,13 +38,13 @@
   --chart-4: oklch(82.8% 0.189 84.429deg);
   --chart-5: oklch(76.9% 0.188 70.08deg);
   --radius: 0.625rem;
-  --sidebar: oklch(98.5% 0 0deg);
+  --sidebar: oklch(97% 0 0deg);
   --sidebar-foreground: oklch(14.5% 0 0deg);
   --sidebar-primary: oklch(20.5% 0 0deg);
   --sidebar-primary-foreground: oklch(98.5% 0 0deg);
-  --sidebar-accent: oklch(97% 0 0deg);
+  --sidebar-accent: oklch(94% 0 0deg);
   --sidebar-accent-foreground: oklch(20.5% 0 0deg);
-  --sidebar-border: oklch(92.2% 0 0deg);
+  --sidebar-border: oklch(89.8% 0 0deg);
   --sidebar-ring: oklch(70.8% 0 0deg);
 }
 
